--- a/src/client/pages/BookingMenu.form
+++ b/src/client/pages/BookingMenu.form
@@ -25,8 +25,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="245" max="-2" attributes="0"/>
-              <Component id="jScrollPane1" min="-2" pref="910" max="-2" attributes="0"/>
-              <EmptySpace pref="255" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="1021" max="-2" attributes="0"/>
+              <EmptySpace pref="144" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -60,7 +60,9 @@
                               <Component id="nav_admin" min="-2" pref="152" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="nav_schedule" min="-2" pref="174" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                              <Component id="nav_booked_data" min="-2" pref="162" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="32767" attributes="0"/>
                               <Component id="lblProfile" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jPanel2" max="32767" attributes="0"/>
@@ -91,6 +93,7 @@
                           <Component id="lblProfile" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
                           <Component id="nav_admin" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           <Component id="nav_schedule" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="nav_booked_data" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -822,7 +825,7 @@
                                   <Component id="roundedButton5" min="-2" pref="265" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace pref="34" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1348,6 +1351,20 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_scheduleActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="client.components.RoundedButton" name="nav_booked_data">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="44" green="44" red="44" type="rgb"/>
+                </Property>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new RoundedBorder(20, new Color(68,68,68), 1)" type="code"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Booked Data"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_booked_dataActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
