--- a/src/client/pages/TrainSchedule.form
+++ b/src/client/pages/TrainSchedule.form
@@ -26,7 +26,14 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="51" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="566" max="-2" attributes="0"/>
+                  <Component id="roundedButton1" min="-2" pref="238" max="-2" attributes="0"/>
+                  <EmptySpace pref="691" max="32767" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -35,6 +42,13 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
+          </Group>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="469" max="-2" attributes="0"/>
+                  <Component id="roundedButton1" min="-2" pref="27" max="-2" attributes="0"/>
+                  <EmptySpace pref="470" max="32767" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -59,14 +73,16 @@
                   <Component id="nav_booking" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="nav_admin" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="566" max="32767" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="nav_booked_data" min="-2" pref="162" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblProfile" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="38" max="32767" attributes="0"/>
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -81,6 +97,7 @@
                           <Component id="jLabel19" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
                           <Component id="nav_booking" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           <Component id="nav_admin" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="nav_booked_data" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jLabel11" min="-2" pref="56" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -156,7 +173,7 @@
                           <Component id="roundedPanel1" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jScrollPane1" min="-2" pref="1200" max="-2" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -168,15 +185,16 @@
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Group type="102" attributes="0">
-                                              <Component id="roundedTextField1" min="-2" pref="793" max="-2" attributes="0"/>
+                                          <Component id="searchTxtField" min="-2" pref="793" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="cmbSortBy" min="-2" pref="369" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="roundedButton1" min="-2" pref="105" max="-2" attributes="0"/>
-                                          </Group>
-                                          <Group type="102" attributes="0">
-                                              <Component id="roundedComboBox1" min="-2" pref="369" max="-2" attributes="0"/>
+                                              <Component id="jLabel3" max="32767" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="cmbOrder" min="-2" pref="274" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="roundedButton2" min="-2" pref="105" max="-2" attributes="0"/>
+                                              <Component id="searchBtn" min="-2" pref="238" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="343" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
@@ -195,16 +213,17 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="roundedTextField1" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                          <Component id="roundedButton1" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                          <Component id="searchTxtField" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="roundedComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="roundedButton2" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                          <Component id="cmbSortBy" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="cmbOrder" alignment="0" min="-2" pref="32" max="-2" attributes="0"/>
+                          <Component id="searchBtn" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="584" max="-2" attributes="0"/>
                       <EmptySpace pref="70" max="32767" attributes="0"/>
                   </Group>
@@ -281,7 +300,10 @@
                 <Property name="text" type="java.lang.String" value="Search : "/>
               </Properties>
             </Component>
-            <Component class="client.components.RoundedTextField" name="roundedTextField1">
+            <Component class="client.components.RoundedTextField" name="searchTxtField">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchTxtFieldActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
@@ -291,26 +313,49 @@
                 <Property name="text" type="java.lang.String" value=" Sort By : "/>
               </Properties>
             </Component>
-            <Component class="client.components.RoundedComboBox" name="roundedComboBox1">
-            </Component>
-            <Component class="client.components.RoundedButton" name="roundedButton1">
+            <Component class="client.components.RoundedComboBox" name="cmbSortBy">
               <Properties>
-                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="33" green="33" red="33" type="rgb"/>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="7">
+                    <StringItem index="0" value="Id Schedule"/>
+                    <StringItem index="1" value="Train Number"/>
+                    <StringItem index="2" value="Machinist"/>
+                    <StringItem index="3" value="Origin"/>
+                    <StringItem index="4" value="Destination"/>
+                    <StringItem index="5" value="Departure Time"/>
+                    <StringItem index="6" value="Price"/>
+                  </StringArray>
                 </Property>
-                <Property name="text" type="java.lang.String" value="CEK"/>
               </Properties>
             </Component>
-            <Component class="client.components.RoundedButton" name="roundedButton2">
+            <Component class="client.components.RoundedButton" name="searchBtn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="33" green="33" red="33" type="rgb"/>
+                  <Color blue="44" green="44" red="44" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="OK"/>
+                <Property name="text" type="java.lang.String" value="Search"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundedButton2ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchBtnActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel3">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="12" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Order :"/>
+              </Properties>
+            </Component>
+            <Component class="client.components.RoundedComboBox" name="cmbOrder">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="2">
+                    <StringItem index="0" value="Ascending"/>
+                    <StringItem index="1" value="Descending"/>
+                  </StringArray>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
@@ -342,7 +387,29 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_adminActionPerformed"/>
           </Events>
         </Component>
+        <Component class="client.components.RoundedButton" name="nav_booked_data">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="44" green="44" red="44" type="rgb"/>
+            </Property>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="new RoundedBorder(20, new Color(68,68,68), 1)" type="code"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Booked Data"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_booked_dataActionPerformed"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
+    <Component class="client.components.RoundedButton" name="roundedButton1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="33" red="33" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Search"/>
+      </Properties>
+    </Component>
   </SubComponents>
 </Form>
